add an array to store past operations.

--- a/AutoComeV1/AutoComeV1.csproj
+++ b/AutoComeV1/AutoComeV1.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WindowEventArgs.cs" />
     <Page Include="Information.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
