able to automate copy+paste from pdf to txt, not able to choose files manually yet.

--- a/AutoComeV1/AutoComeV1.csproj
+++ b/AutoComeV1/AutoComeV1.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>Text.xaml</DependentUpon>
     </Compile>
     <Compile Include="WindowEventArgs.cs" />
+    <Compile Include="WindowHelper.cs" />
     <Page Include="Information.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
