add two shortcuts; add "1. 2. ...", "a. b. ..." functons

--- a/AutoComeV1/AutoComeV1.csproj
+++ b/AutoComeV1/AutoComeV1.csproj
@@ -57,6 +57,9 @@
     <Compile Include="ChooseFiles.xaml.cs">
       <DependentUpon>ChooseFiles.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Customize.xaml.cs">
+      <DependentUpon>Customize.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Information.xaml.cs">
       <DependentUpon>Information.xaml</DependentUpon>
     </Compile>
@@ -70,6 +73,10 @@
     <Compile Include="WindowEventArgs.cs" />
     <Compile Include="WindowHelper.cs" />
     <Page Include="ChooseFiles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Customize.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -168,6 +175,9 @@
   <ItemGroup>
     <Resource Include="pictures\off.png" />
     <Resource Include="pictures\on.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="pictures\settings.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
